More fixes to alignment

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -25,6 +25,8 @@
 .name,
 .job,
 .email,
+.social-icons,
+.image,
 .footer {
   text-align: center;
 }
@@ -102,7 +104,7 @@
   background-color: #000;
 }
 
-email {
+.email {
   font-size: 14px;
   font-family: "Ubuntu Mono";
 }
